@@ -1,0 +1,8 @@
+# list of compressed file extension
+# please alpha sort
+bz
+bz2
+gz
+tgz
+z
+Z
